# gnotes

./: .gitignore  README.md  main.py  pyproject.toml
config/: schema.py  settings.py  urls.py
docs/learning/: GraphQL_Queries.md  Migrations.md  Postgres_Fix.md
notes/: admin.py  models.py  schema.py
notes/migrations/: 0001_initial.py
